@startuml
skinparam groupInheritance 4

class CliInterpreter {
}

class CliContext {
    # envs: dict[str, str]
    # working_dir: str
    + setEnv(str, str): None
    + getEnv(str): str
    + setWorkingDir(str): None
    + getWorkingDir(): str
}

class UserInputParser {
    - context: CliContext
    + parse(str): list[Command]
    - {static} tokenize_command(str): list[str]
    - substitute_envs(list[str]) -> list[str]
    - replace_env(re.Match) -> str
    - extract_assignments(list[str]) -> (AssignCommand | None, list[str])
    - create_command(list[str]) -> Command
    - strip_quotes(list[str]) -> None
    - {static} strip_single_argument_quotes(str) -> str
}

class CommandExecutor {
    - sce: SingleCommandExecutor
    - pe: PipeExecutor
    + execute(list[Command]) -> None
}

class SingleCommandExecutor {
    + {static} execute(Command) -> None
}

class PipeExecutor {
    + {static} execute(list[Command]) -> None
}

package commands {
    abstract class Command {
        + args: list[str]
        + input: TextIO
        + output: TextIO
        + context: CliContext
        + {abstract} execute(self) -> int
        + __eq__(other) -> bool
        + __str__() -> str
        # write_output(str) -> None
    }

    class CatCommand {
    }

    class EchoCommand {
    }

    class WcCommand {
    }

    class PwdCommand {
    }

    class ExitCommand {
    }

    class AssignCommand {
    }

    class UnknownCommand {
    }

    class GrepCommand {
        - argparser: argparse.ArgumentParser
        - parse_arguments() -> (str, str, bool, bool, int)
        - resolve_regexp_parameters(str, bool, bool) -> (str, int)
    }

    class LsCommand {
        ~ __get_detailed_entry(str, str) -> dict
        ~ __format_long_output(list, int) -> str
        ~ __get_permissions(str, int) -> str
        ~ __get_file_type(str) -> str
        ~ __get_owner(int) -> str
        ~ __get_group(int) -> str
        ~ __format_time(float) -> str
        ~ __calculate_total_blocks(list) -> int
    }

    class CdCommand {
    }
}

CliInterpreter *-- UserInputParser
CliInterpreter *-- CommandExecutor
CliInterpreter *-- CliContext

UserInputParser --> Command
CommandExecutor *-- SingleCommandExecutor
CommandExecutor *-- PipeExecutor

Command <|-- CatCommand
Command <|-- EchoCommand
Command <|-- WcCommand
Command <|-- PwdCommand
Command <|-- ExitCommand
Command <|-- AssignCommand
CliContext <-- Command
Command <|-- UnknownCommand
Command <|-- GrepCommand
Command <|-- LsCommand
Command <|-- CdCommand

@enduml